--- a/white__style_items.css
+++ b/white__style_items.css
@@ -56,6 +56,7 @@
     transform: translateX(0%);
 }
 
+
 @media screen and (max-width:864px) {
 
 }
@@ -81,3 +82,17 @@
 }
 
 /* END mouseOver add text element */
+
+
+/* fade-in & fade-up */
+
+.Wfade-up {
+    opacity: 0;
+    transform: translateY(150px);
+    transition: opacity .5s ease-in-out, transform .5s ease-in-out;
+}
+.Wfade-in {
+    opacity: 0;
+    transform: translateX(-200px);
+    transition: opacity .5s ease-in-out, transform .5s ease-in-out;
+}
