--- a/style.css
+++ b/style.css
@@ -1,9 +1,10 @@
 /* плавный контент */
-.test{
+.elemnt_sonya{
     height: 500px;
     width: 500px;
-    background: #000;
+    background: #b13535;
 }
+
 .services{
     padding-top:50px ;
     padding-bottom: 50px;
